src/objects/Document_Template__mdt.object
<CustomObject>
    <description>Metadatatype used to store all the documents required for a process.</description>
    <fields>
        <fullName>Acceptance_Type__c</fullName>
        <label>Acceptance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Matrix__c</fullName>
        <label>Document Matrix</label>
        <referenceTo>Document_Matrix__mdt</referenceTo>
        <relationshipLabel>Document Templates</relationshipLabel>
        <relationshipName>Document_Templates</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Template</label>
    <pluralLabel>Document Templates</pluralLabel>
</CustomObject>